Security hardening: clipboard timeout 15s, secure cache clearing, machine entropy, char[] zeroization
- Reduced clipboard default timeout from 30s to 15s for tighter security
- Added CryptoUtils.zeroize(char[]) for consistent password cleanup
- Implemented secureClear() in FileCache to overwrite data before clearing
- LogTextEditor now calls secureClearCache() when locking to prevent memory forensics
- SecureSettings uses machine-specific entropy (OS/arch/java.home hash) in key derivation
- Updated documentation to reflect security improvements
- Fixed PMD violations: removed unused methods, improved code quality
- Updated delay randomization docs to reflect actual implementation